# specutils

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CITATION  LICENSE.rst  MANIFEST.in  README.md  README.rst  SDSSV_Loaders_Demo.py  app.py  astra_readers.py  azure-pipelines.yml  conftest.py  mpl_preamble.py  pyproject.toml  readthedocs.yml  requirements.txt  sdss_v.py  setup.cfg  setup.py  test.ipynb  test.py  test_implementation.py  tox.ini  version.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: changelog.yml  ci_cron.yml  ci_cron_weekly.yml  ci_workflows.yml  enforce_changelog.yml  publish.yml
docs/: Makefile  analysis.rst  arithmetic.rst  basic_analysis.rst  conf.py  contributing.rst  creating_spectra.rst  credits.rst  custom_loaders.rst  custom_loading.rst  environment.yml  fitting.rst  getting_started.rst  high-level_API.rst  identify.rst  index.rst  installation.rst  introduction.rst  make.bat  manipulation.rst  model_fitting.rst  nitpick-exceptions  releasing.rst  rtd-pip-requirements  smoothing.rst  spectral_cube.rst  spectral_regions.rst  spectrum.rst  spectrum1d.rst  spectrum_collection.rst  specutils_classes_diagrams.pptx  types_of_spectra.rst  wcs_utils.rst
docs/_ext/: listformats.py  read_formats.txt
docs/_static/: specutils.css
docs/docs/: rtd-pip-requirements
docs/pyplots/: plotting_example.py
docs/source/: api.rst  conf.py  custom_loaders.rst  index.rst  installation.rst  introduction.rst  model_fitting.rst  viewer.rst
docs/source/api/: data.rst  index.rst  loaders.rst  statistics.rst
docs/specutils/: extinction.rst  fits_wcs.rst  index.rst  read_fits.rst  reddening.rst  spectrum1d.rst  specwcs.rst  write_fits.rst
docs/specutils/wavelength_calibration/: peak_finding.rst
functions_reddening/: reddening.py
license/: LICENSE.txt
licenses/: LICENSE.rst
pyfocal/: app.py
pyfocal/analysis/: modeling.py  statistics.py
pyfocal/core/: comms.py  containers.py  data.py  events.py
pyfocal/factories/: loaders.py  registries.py
pyfocal/factories/default_loaders/: manga.yaml  test.yaml
pyfocal/interfaces/: decorators.py  factories.py  loaders.py  managers.py  model_io.py  registries.py
pyfocal/interfaces/default_loaders/: ascii.yaml  generic.yaml  keck_deimos.yaml  manga.yaml  test.yaml
pyfocal/ui/: controller.py  viewer.py
pyfocal/ui/qt/: axisdialog.py  icon_resource_rc.py  layer_arithmetic_dialog.py  (+5 more)
specutils/: CITATION  RadioSpectrum1D.py  __init__.py  _astropy_init.py  _extinction.pyx  cextinction.pyx  conftest.py  extinction.py  helcorr.py  plotlines.py  rvmeasure.py  setup_package.py  spectrum1d.py  telluric.py
specutils/adapters/: wcs.py
specutils/analysis/: __init__.py  centroid.py  correlation.py  equivalent_width.py  flux.py  higherlevel.py  location.py  moment.py  resample.py  snr.py  splice.py  template_comparison.py  template_match.py  template_matching.py  uncertainty.py  utils.py  width.py
specutils/core/: generic.py  spectrum1d.py
specutils/data/: kext_albedo_WD_MW_5.5A_30_D03_all.txt  vega_all.hdf5
specutils/decorators/: __init__.py  io_registers.py
specutils/fitting/: __init__.py  continuum.py  fitmodels.py  spline.py  spline_continuum.py
specutils/io/: IUE.py  __init__.py  _list_of_loaders.py  generic_fits.py  generic_spectrum_from_table.py  parsing_utils.py  read_IRAF_spec.py  read_fits.py  registers.py  registry.py  setup_package.py  write_fits.py
specutils/manipulation/: __init__.py  aligning.py  continuum.py  estimate_uncertainty.py  excise.py  extract_spectral_region.py  manipulation.py  model_replace.py  replace_model.py  replace_segment.py  resample.py  shift.py  smoothing.py  utils.py
specutils/modeling/: models.py  profiles.py
specutils/models/: BSplineModel.py  Indexer.py  setup_package.py
specutils/processing/: smoothing.py
specutils/readers/: rdech.py  read_IRAF_spec.py
specutils/smoothing/: smoothing.py
specutils/spectra/: __init__.py  spectral_axis.py  spectral_coordinate.py  spectral_region.py  spectrum.py  spectrum1d.py  spectrum_collection.py  spectrum_list.py  spectrum_mixin.py  wcs_wrappers.py  xrayspectrum1d.py
specutils/tests/: conftest.py  coveragerc  setup_package.py  simple_tests.py  spectral_cube_test_spectral_axis.py  spectral_examples.py  test_aligning.py  test_analysis.py  test_arithmetic.py  test_continuum.py  test_correlation.py  test_dc_common_loaders.py  test_extinction.py  test_fitting.py  test_higherlevel.py  test_io.py  test_loader_fits_tabular.py  test_loaders.py  test_manipulation.py  test_model_replace.py  test_region_extract.py  test_regions.py  test_replace_model.py  test_replace_segment.py  test_resample.py  test_shift.py  test_slicing.py  test_smoothing.py  test_spectral_axis.py  test_spectral_coord.py  test_spectral_region.py  test_spectrum.py  test_spectrum1d.py  test_spectrum1d_unit_pix2.py  test_spectrum1dref.py  test_spectrum_collection.py  test_spline.py  test_spline_model.py  test_template_comparison.py  test_template_match.py  (+3 more)
specutils/utils/: IRAF_id_reader.py  __init__.py  decorators.py  funcs.py  logger.py  ndcontainer.py  quantity_model.py  reddening.py  setup_package.py  spectral_region.py  united_model.py  wcs_utils.py
specutils/wcs/: __init__.py  specwcs.py  spline_model.py  wcs_adapter.py  wcs_wrapper.py
specviz/: __init__.py  app.py
specviz/analysis/: __init__.py  modeling.py  statistics.py  utils.py
specviz/core/: __init__.py  annotation.py  comms.py  containers.py  data.py  linelist.py  mixins.py  plots.py  threads.py
specviz/data/: README.md  generic_spectra.fits  generic_spectra.txt  spec1d.1245.066.12004136.fits  spec1d.gds1312_H0.003.emp26177.fits
specviz/interfaces/: __init__.py  decorators.py  factories.py  importer.py  initializers.py  loaders.py  managers.py  model_io.py  registries.py
specviz/io/: __init__.py  loaders.py  registries.py  yaml_loader.py
specviz/plugins/: data_list_plugin.py  layer_list_plugin.py  model_fitting_plugin.py  plot_tools_plugin.py  statistics_plugin.py  tool_tray_plugin.py
specviz/ui/: controller.py  viewer.py
(+195 files in other folders)
