[metadata]
name = specutils
author = Specutils Developers
author_email = coordinators@astropy.org
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://specutils.readthedocs.io/
description = Package for spectroscopic astronomical data
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/specutils

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy>=5.1
    gwcs>=0.17.0
    scipy
    asdf>=2.10,!=2.12.0
    ndcube>=2.0

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    matplotlib
    graphviz
    coverage
    asdf
    spectral-cube
docs =
    sphinx-astropy
    matplotlib
    graphviz

[options.package_data]
specutils = data/*

[options.entry_points]
asdf_extensions =
    specutils = specutils.io.asdf.extension:SpecutilsExtension

[tool:pytest]
testpaths = "specutils" "docs"
xfail_strict = true
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
asdf_schema_root = specutils/io/asdf/schemas
asdf_schema_tests_enabled = true
filterwarnings =
    error
    ignore:distutils Version classes are deprecated:DeprecationWarning
    ignore:unclosed file:ResourceWarning
    ignore:numpy\.ndarray size changed:RuntimeWarning
    ignore:invalid value encountered in .*divide:RuntimeWarning
    ignore:.*contains multiple slashes:astropy.units.core.UnitsWarning
    ignore::astropy.wcs.wcs.FITSFixedWarning
    ignore:Input WCS indicates that the spectral axis is not last:UserWarning
    ignore:No velocity defined on frame:astropy.coordinates.spectral_coordinate.NoVelocityWarning
    ignore:No observer defined on WCS:astropy.utils.exceptions.AstropyUserWarning

[coverage:run]
omit =
    specutils/_astropy_init*
    specutils/conftest.py
    specutils/*setup_package*
    specutils/tests/*
    specutils/*/tests/*
    specutils/extern/*
    specutils/version*
    */specutils/_astropy_init*
    */specutils/conftest.py
    */specutils/*setup_package*
    */specutils/tests/*
    */specutils/*/tests/*
    */specutils/extern/*
    */specutils/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

# TODO: Un-ignore and fix these warnings.
# E126 continuation line over-indented for hanging indent
# E127 continuation line over-indented for visual indent
# E128 continuation line under-indented for visual indent
# E201 whitespace after '{'
# E202 whitespace before ']'
# E203 whitespace before ','
# E221 multiple spaces before operator
# E225 missing whitespace around operator
# E226 missing whitespace around arithmetic operator
# E227 missing whitespace around bitwise or shift operator
# E231 missing whitespace after ','
# E251 unexpected spaces around keyword / parameter equals
# E501 line too long
# E731 do not assign a lambda expression, use a def
# E741 ambiguous variable name 'l'
# W503 line break before binary operator
# W504 line break after binary operator
# W505 doc line too long
[flake8]
max-line-length = 100
max-doc-length = 79
ignore = E126,E127,E128,E201,E202,E203,E221,E225,E226,E227,E231,E251,E501,E731,E741,W503,W504,W505
